[package]
name = "maikor-vm-core"
version = "0.1.7"
edition = "2021"
authors = ["Ray Britton <raybritton@pm.me>"]
description = "VM for playing Maikor games"
license = "MIT"
repository = "https://github.com/MaikorAppPublic/vm-core"
readme = "README.md"
homepage = "https://maikor.app"
keywords = ["game","gamedev","2d","vm"]
categories = ["games"]

[dependencies]
maikor-platform = "0.1.19"
log = "0.4.17"

[dev-dependencies]
lazy_static = "1.4.0"